--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <style>
         body {
             border: 1px solid black;
@@ -14,33 +15,51 @@
 
         header {
             background-color: rgb(231, 222, 222);
-            height: 60px;
+            height: 15vh;
             display: flex;
             justify-content: center;
             border: 1px solid black;
             align-items: center;
-            max-height: 100vh;
         }
 
-        main {
+
+        .container {
             background-color: rgb(245, 245, 142);
             height: 70vh;
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: flex-start;
-            align-content: center;
             border: 1px solid black;
         }
 
+        .row {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            flex-wrap: wrap;
+        }
 
-
-        aside {
-            background-color: rgb(112, 151, 112);
-            height: 70vh;
+        .item {
             display: flex;
             flex-direction: column;
+            align-content: center;
+            justify-content: center;
             border: 1px solid black;
+            flex-wrap: wrap;
+            margin: 30px;
+            width: 300px;
+            height: 50px;
+        }
+
+        #item-three {
+            flex-grow: 1;
+        }
+
+        .aside {
+            background-color: rgb(112, 151, 112);
+            display: flex;
+            border: 1px solid black;
+            justify-content: center;
+            align-items: center;
+            width: 20vw;
         }
 
         footer {
@@ -52,68 +71,28 @@
             border: 1px solid black;
             bottom: 0px;
             margin-bottom: 0px;
-
-        }
-
-
-
-        .row {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-content: space-between;
-            border: 1px solid black;
-            padding: 10 px;
-            margin: 100px;
-
-        }
-
-        .row1 {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-
-            border: 1px solid black;
-            padding: 30 px;
-            margin: 50px;
-        }
-
-        .row1-g {
-            display: flex;
-            flex-grow: 2;
-        }
-
-        #aside {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            align-content: center;
-            width: 25vw;
-            border: 1px solid black;
+            padding: 15px;
         }
     </style>
 </head>
 
 <body>
-    <header class="container">Шапка страницы
+    <header>Шапка страницы
     </header>
-    <main class="container">Основная часть
-        <div class="row">
-            <arcticle class="col col__arcticle">
-                <div class="row1">
-                    <article>Еще 1</article>
-                </div>
-                <div class="row1">
-                    <article>Еще 2</article>
-                </div>
-                <div class="row1-g">
-                    <article>Еще 3</article>
-                </div>
-        </div>
-        </arcticle>
-        <aside id="aside">Боковая область
-        </aside>
+    <main>
+        <div class="container">
+
+            <p style="display: flex;">Основная часть</p>
+
+            <div class="row">
+                <div class="item">Еще 1</div>
+                <div class="item">Еще 2</div>
+                <div class="item" id="item-three">Еще 3</div>
+            </div>
+
+            <aside class="aside">
+                <p>Боковая область</p>
+            </aside>
         </div>
     </main>
 
