--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <main>
         <div class="container">
 
-            <p style="display: flex;">Основная часть</p>
+            <p>Основная часть</p>
 
             <div class="row">
                 <div class="item">Еще 1</div>
