--- a/week6/grid.html
+++ b/week6/grid.html
@@ -54,11 +54,15 @@
         .item1,
         .item2,
         .item3 {
-            background-color: rgb(223, 210, 35);
+            background-color: #dfd223;
+            display: grid;
+            align-content: center;
+            text-align: center;
+            height: 60px;
         }
 
         .item3 {
-            display: grid;
+
             grid-column: 1/3;
         }
 
@@ -76,6 +80,9 @@
         .section {
             background-color: whitesmoke;
             height: 60%;
+            text-align: center;
+            display: grid;
+            align-items: center;
         }
     </style>
 </head>
@@ -87,9 +94,9 @@
         <main class="main">
             <p class="main-text">Основная часть</p>
             <div class="item">
-                <section class="item item1">еще 1</section>
-                <section class="item item2">еще 2</section>
-                <section class="item item3">еще 3</section>
+                <section class="item1">еще 1</section>
+                <section class="item2">еще 2</section>
+                <section class="item3">еще 3</section>
             </div>
         </main>
         <aside class="aside">Боковая область</aside>
