--- a/week6/wine.html
+++ b/week6/wine.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="sheetstyle" href="/assets/styles/normalize.css">
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link rel="sheetstyle" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100&family=Montserrat:wght@100&display=swap"
@@ -19,7 +19,7 @@
         <div class="header">
             <div class="headcontact">
                 <address class="adress">Новокузнечный переулок 4/1</address>
-                <contacts class="contacts">8 (812) 123-45-67</contacts>
+                <p class="contacts">8 (812) 123-45-67</p>
             </div>
             <div>
                 <nav class="navbar">
@@ -58,7 +58,7 @@
                     dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus,
                     amet,
                     quis risus. Pellentesque scelerisque nunc, orci aliquam quis.</p>
-                <img src="/assets/images/image.png" class="glass" alt="glass">
+                <img src="assets/images/image.png" class="glass" alt="glass">
             </div>
         </div>
         <section>
@@ -98,9 +98,9 @@
                         <button class="section__button button">узнать подробнее</button>
                     </div>
                     <div class="sectionright">
-                        <img src="/assets/images/Rectangle11.png" alt="wineonfield" class="wineonfield">
-                        <img src="/assets/images/Rectangle12.png" class="bottleline" alt="bottleinline">
-                        <img src="/assets/images/Rectangle13.png" class="bottlegroup" alt="bottlegroup">
+                        <img src="assets/images/Rectangle11.png" alt="wineonfield" class="wineonfield">
+                        <img src="assets/images/Rectangle12.png" class="bottleline" alt="bottleinline">
+                        <img src="assets/images/Rectangle13.png" class="bottlegroup" alt="bottlegroup">
                     </div>
                 </div>
             </div>
@@ -110,12 +110,12 @@
             <div class="black">
 
                 <div class="section2">
-                    <img src="/assets/images/image3.png" class="image3" alt="виноград">
+                    <img src="assets/images/image3.png" class="image3" alt="виноград">
                     <h2 class="section2capture">Запись на дегустацию</h2>
                     <p class="textsection2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor
                         in hac id imperdiet
                         adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. </p>
-                    <img src="/assets/images/image2.png" class="image2" alt="бочка">
+                    <img src="assets/images/image2.png" class="image2" alt="бочка">
                     <form class="form">
                         <p>Имя</p>
                         <input type="text" name="firstname" class="formname">
