--- a/week6/wine.html
+++ b/week6/wine.html
@@ -15,137 +15,142 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <div class="headcontact">
-                <address class="adress">Новокузнечный переулок 4/1</address>
-                <p class="contacts">8 (812) 123-45-67</p>
-            </div>
-            <div>
-                <nav class="navbar">
-                    <a class="a_header" href="catalog.html">каталог</a>
-                    <a class="a_header" href="delivery.html">доставка</a>
-                    <a class="a_header" href="collections.html">коллекции</a>
-                    <a class="a_header" id="contacts" href="contacts.html">контакты</a>
-                </nav>
-            </div>
-            <div class="header-button">
-                <button class="header__button_left button">винная карта</button>
-                <button class="header__button_right button">дегустация</button>
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="mainarticle">
-            <div class="article">
-                <h2 class="maincapture">Лучший вкус, это вкус долголетнего вина</h2>
-                <hr class="linearticle">
-                <p class="loremipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor
-                    in
-                    hac
-                    id
-                    imperdiet
-                    adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac.
-                    Mauris
-                    dictumst risus pulvinar blandit elit. Vestibulum quam ultrices nascetur et viverra suscipit.
-                    Proin
-                    vitae
-                    aliquet leo aliquam amet rutrum. Lectus auctor purus ultrices enim ultrices. Augue fringilla
-                    tellus
-                    tortor orci ultrices sed. Viverra cras sapien, pellentesque viverra malesuada. Tellus dolor,
-                    eget
-                    vitae
-                    dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus,
-                    amet,
-                    quis risus. Pellentesque scelerisque nunc, orci aliquam quis.</p>
-                <img src="assets/images/image.png" class="glass" alt="glass">
-            </div>
-        </div>
-        <section>
-            <div class="beije">
-                <div class="section">
-                    <div class="sectionleft">
-                        <h4 class="brandnew">Новинки коллекций</h4>
-                        <h2 class="sectioncapture">Март 1980
-                            Урожай Марселя</h2>
-                        <!-- <hr class="linesection">-->
-                        <p class="textsection">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
-                            tortor
-                            in hac id imperdiet
-                            adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales
-                            ac.
-                        </p>
-                        <div class="table">
-                            <p>1980</p>
-                            <p>Colli Euganei Bianco Ca' Lustra 1980
-                                <br>
-                                Красочная бутылка вина из Марселя
-                            </p>
-                            <p>
-                                1980
-                                <p>Colli Euganei Bianco Ca' Lustra 1980 <br>Красочная бутылка вина из Марселя</p>
+    <div class="container">
+        <header>
+            <div class="header">
+                <div class="headcontact">
+                    <address class="adress">Новокузнечный переулок 4/1</address>
+                    <p class="contacts">8 (812) 123-45-67</p>
 
+                    <nav class="navbar">
+                        <a class="a_header" href="catalog.html">каталог</a>
+                        <a class="a_header" href="delivery.html">доставка</a>
+                        <a class="a_header" href="collections.html">коллекции</a>
+                        <a class="a_header" id="contacts" href="contacts.html">контакты</a>
+                    </nav>
+                </div>
+                <div class="header-button">
+                    <button class="header__button_left button">винная карта</button>
+                    <button class="header__button_right button">дегустация</button>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="mainarticle">
+                <div class="article">
+                    <h2 class="maincapture">Лучший вкус, это вкус долголетнего вина</h2>
+                    <hr class="linearticle">
+                    <p class="loremipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor
+                        in
+                        hac
+                        id
+                        imperdiet
+                        adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac.
+                        Mauris
+                        dictumst risus pulvinar blandit elit. Vestibulum quam ultrices nascetur et viverra suscipit.
+                        Proin
+                        vitae
+                        aliquet leo aliquam amet rutrum. Lectus auctor purus ultrices enim ultrices. Augue fringilla
+                        tellus
+                        tortor orci ultrices sed. Viverra cras sapien, pellentesque viverra malesuada. Tellus dolor,
+                        eget
+                        vitae
+                        dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus,
+                        amet,
+                        quis risus. Pellentesque scelerisque nunc, orci aliquam quis.</p>
+                    <img src="assets/images/image.png" class="glass" alt="glass">
+                </div>
+            </div>
+            <section>
+                <div class="beije">
+                    <div class="section">
+                        <div class="sectionleft">
+                            <h4 class="brandnew">Новинки коллекций</h4>
+                            <h2 class="sectioncapture">Март 1980
+                                Урожай Марселя</h2>
+                            <!-- <hr class="linesection">-->
+                            <p class="textsection">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
+                                tortor
+                                in hac id imperdiet
+                                adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi
+                                sodales
+                                ac.
+                            </p>
+                            <div class="table">
+                                <p>1980</p>
+                                <p>Colli Euganei Bianco Ca' Lustra 1980
+                                    <br>
+                                    Красочная бутылка вина из Марселя
+                                </p>
                                 <p>
                                     1980
                                     <p>Colli Euganei Bianco Ca' Lustra 1980 <br>Красочная бутылка вина из Марселя</p>
+
+                                    <p>
+                                        1980
+                                        <p>Colli Euganei Bianco Ca' Lustra 1980 <br>Красочная бутылка вина из Марселя
+                                        </p>
+                            </div>
+                            <p class="textsection">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
+                                tortor
+                                in hac id imperdiet
+                                adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi
+                                sodales
+                                ac.
+                            </p>
+                            <button class="section__button button">узнать подробнее</button>
                         </div>
-                        <p class="textsection">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
+                        <div class="sectionright">
+                            <img src="assets/images/Rectangle11.png" alt="wineonfield" class="wineonfield">
+                            <img src="assets/images/Rectangle12.png" class="bottleline" alt="bottleinline">
+                            <img src="assets/images/Rectangle13.png" class="bottlegroup" alt="bottlegroup">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+
+                <div class="black">
+
+                    <div class="section2">
+                        <img src="assets/images/image3.png" class="image3" alt="виноград">
+                        <h2 class="section2capture">Запись на дегустацию</h2>
+                        <p class="textsection2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
                             tortor
                             in hac id imperdiet
-                            adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales
-                            ac.
-                        </p>
-                        <button class="section__button button">узнать подробнее</button>
-                    </div>
-                    <div class="sectionright">
-                        <img src="assets/images/Rectangle11.png" alt="wineonfield" class="wineonfield">
-                        <img src="assets/images/Rectangle12.png" class="bottleline" alt="bottleinline">
-                        <img src="assets/images/Rectangle13.png" class="bottlegroup" alt="bottlegroup">
+                            adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. </p>
+                        <img src="assets/images/image2.png" class="image2" alt="бочка">
+                        <form class="form">
+                            <p>Имя</p>
+                            <input type="text" name="firstname" class="formname">
+                            <p id="phone">Телефон</p>
+                            <input type="text" name="phone" class="formphone">
+                            <p>Бутик на невском</p>
+                            <input type="text" name="adress" class="formadress">
+                            <button class="formbutton">ЗАПИСАТЬСЯ</button>
+                        </form>
                     </div>
                 </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <nav class="footerbar">
+                <a class="a_footer" href="main.html">Главная</a>
+                <a class="a_footer" href="catalog.html">Каталог</a>
+                <a class="a_footer" href="customers.html">Поставщики</a>
+                <a class="a_footer" href="collections.html">коллекции</a>
+                <a class="a_footer" href="tasting.html">Дегустация</a>
+                <a class="a_footer" href="collection2020.html">Коллекция 2020</a>
+                <a class="a_footer" href="contacts.html">Контакты</a>
+            </nav>
+            <div class="footercontact">
+                <a class="a_footer footercontact" href="wine.html">винный бутик LE CORTE</a>
+                <contacts class="a_footer footercontact">8 (812) 123-45-67</contacts>
+                <a class="a_footer footercontact" href="utube.com vk.com fb.com">Youtube VK FB</a>
+                <a class="a_footer footercontact" href="mailto:©le-corte.ru">© le-corte.ru</a>
             </div>
-        </section>
-        <section>
-
-            <div class="black">
-
-                <div class="section2">
-                    <img src="assets/images/image3.png" class="image3" alt="виноград">
-                    <h2 class="section2capture">Запись на дегустацию</h2>
-                    <p class="textsection2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor
-                        in hac id imperdiet
-                        adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. </p>
-                    <img src="assets/images/image2.png" class="image2" alt="бочка">
-                    <form class="form">
-                        <p>Имя</p>
-                        <input type="text" name="firstname" class="formname">
-                        <p id="phone">Телефон</p>
-                        <input type="text" name="phone" class="formphone">
-                        <p>Бутик на невском</p>
-                        <input type="text" name="adress" class="formadress">
-                        <button class="formbutton">ЗАПИСАТЬСЯ</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <nav class="footerbar">
-            <a class="a_footer" href="main.html">Главная</a>
-            <a class="a_footer" href="catalog.html">Каталог</a>
-            <a class="a_footer" href="customers.html">Поставщики</a>
-            <a class="a_footer" href="collections.html">коллекции</a>
-            <a class="a_footer" href="tasting.html">Дегустация</a>
-            <a class="a_footer" href="collection2020.html">Коллекция 2020</a>
-            <a class="a_footer" href="contacts.html">Контакты</a>
-        </nav>
-        <div class="footercontact">
-            <a class="a_footer footercontact" href="wine.html">винный бутик LE CORTE</a>
-            <contacts class="a_footer footercontact">8 (812) 123-45-67</contacts>
-            <a class="a_footer footercontact" href="utube.com vk.com fb.com">Youtube VK FB</a>
-            <a class="a_footer footercontact" href="mailto:©le-corte.ru">© le-corte.ru</a>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 
 </html>
