--- a/week8/index8.html
+++ b/week8/index8.html
@@ -54,6 +54,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
+                </ul>
             </div>
         </nav>
     </div>
@@ -71,15 +72,15 @@
             <a href="#" class="btn btn-primary mt-15 mb-15 ml-15">Call to action</a>
         </div>
     </div>
-    </div>
+
 
     <div class="container containercard">
         <div class="row">
             <div class="card-deck">
-                <div class="card text-center" style="width: 325px;">
+                <div class="card text-center" style="width: 18rem;">
                     <img class=" card-img-top" src="assets/images/image.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"> Card <title></title>
+                        <h5 class="card-title"> Card
                         </h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
                             tortor
@@ -93,12 +94,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="card text-center" style="width: 325px;">
+                <div class="card text-center" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/image.png" alt="Card image cap">
 
                     <div class="card-body">
-                        <h5 class="card-title"> Card <title></title>
-                        </h5>
+                        <h5 class="card-title"> Card</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
                             tortor
                             in
@@ -111,11 +111,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="card text-center" style="width: 325px;">
+                <div class="card text-center" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/image.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"> Card <title></title>
-                        </h5>
+                        <h5 class="card-title"> Card</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
                             tortor
                             in
@@ -128,11 +127,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="card text-center" style="width: 325px;">
+                <div class="card text-center" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/image.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"> Card <title></title>
-                        </h5>
+                        <h5 class="card-title"> Card</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim
                             tortor
                             in
@@ -152,7 +150,7 @@
         <div class="container bg-dark text-white mt-3 mb-3 rounded-bottom">
             <div class="row py-4 align-items-center">
                 <div class="col text-center">
-                    Copyright &copy Your Website 2019
+                    Copyright &copy; Your Website 2019
                 </div>
             </div>
         </div>
